# infotecs_socketsthreads

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: CompileOptions.cmake
src/: CMakeLists.txt
src/appclient/: CMakeLists.txt
src/appclient/appclient/: mainclient.cpp
src/appserver/: CMakeLists.txt
src/appserver/appserver/: mainserver.cpp
src/libclient/: CMakeLists.txt
src/libclient/libclient/: client.cpp  client.hpp
src/libfuncs/: CMakeLists.txt
src/libfuncs/libfuncs/: funcs.cpp  funcs.hpp  funcs.test.cpp
src/libserver/: CMakeLists.txt
src/libserver/libserver/: server.cpp  server.hpp
